--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "react-9-2",
+  "name": "react-9",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://olegbirykov.github.io/react-9-2/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "cra-template": "1.1.1",
+    "prop-types": "^15.7.2",
+    "push-dir": "^0.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
